tests/valid/circular_ref_self.py
from fhir_types import FHIR_QuestionnaireResponse_Item

q: FHIR_QuestionnaireResponse_Item = {"id": "123"}
