tests/invalid/type_list_enum.py
from fhir_types import FHIR_ElementDefinition

p: FHIR_ElementDefinition = {"representation": ["xmlAttr", "AAAxmlText"]}
